# WebRPA

./: .gitignore  LICENSE  README.md  WebRPAConfig.json  commit-offline-changes.ps1  download_models.py  quick-test.ps1  verify-offline.js
backend/: .gitignore  @AutomationLog.txt  diff_classes.txt  requirements.txt  run.py  screenshot_selector.ps1  screenshot_tool.py
backend/app/: __init__.py  main.py
backend/app/api/: browser.py  custom_modules.py  data_assets.py  desktop_picker.py  element_picker.py  image_assets.py  local_workflows.py  phone.py  scheduled_tasks.py  system.py  system_dialog.py  system_macro.py  system_media.py  system_mouse.py  system_napcat.py  triggers.py  workflows.py
backend/app/executors/: __init__.py  advanced.py  advanced_api.py  advanced_browser.py  advanced_clipboard.py  advanced_email.py  advanced_excel.py  advanced_file_info.py  advanced_file_ops.py  advanced_image.py  advanced_keyboard.py  ai.py  (+80 more)
backend/browser_plugin/: 智能元素定位助手.user.js
frameworkHub/: .gitignore  README.md  ecosystem.config.cjs  package-lock.json  package.json
frameworkHub/src/: database.js  index.js  websocket.js
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
launcher/: README.md  index.html  package-lock.json  package.json  vite.config.js  安装Rust指南.md  开发模式.bat  快速开始.md  构建启动器.bat  生成图标.html  部署说明.md  重新生成图标.bat
launcher/src/: App.vue  style.css
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/icons/: README.md  icon.icns
launcher/src-tauri/src/: main.rs
(+238 files in other folders)
