[package]
name = "webrpa-launcher"
version = "1.31.0"
description = "WebRPA 启动器"
authors = ["WebRPA Team"]
license = "MIT"
repository = ""
edition = "2021"

[[bin]]
name = "webrpa-launcher"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["webview-data-url"] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-window-state = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
regex = "1.10"
sevenz-rust = "0.6"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
urlencoding = "2.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
